<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/cart"
        android:title="@string/cart_menu"
        android:icon="@drawable/cart"
        app:showAsAction="always"
        android:orderInCategory="1"
        app:actionLayout="@layout/custom_cart"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/view_selector"
        android:title="@string/view"
        android:icon="@drawable/icon_view_grid"
        app:showAsAction="always"
        android:orderInCategory="3"
        />
</menu>