<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:padding="8dp"
            android:text="@string/item_name"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/itemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:padding="8dp"
            android:text="@string/item_type"
            android:layout_centerHorizontal="true"/>

        <RatingBar
            android:id="@+id/rating"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemType"
            android:layout_centerHorizontal="true"
            android:isIndicator="true"
            android:numStars="5"
            android:padding="10dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:text="@string/cart"
                android:textSize="10sp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="10sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>